Card names and details added

--- a/index.html
+++ b/index.html
@@ -182,28 +182,28 @@
                         <div class="we_box">
                            <i><img src="images/weicon1.png" alt="#"/></i>
                            <h3>Nail Art</h3>
-                           <p>Lorem ipsum dolor sit amet, consectetur </p>
+                           <p>Creative nail art with intricate designs for a stylish, unique look.</p>
                         </div>
                      </div>
                      <div class="col-md-3 col-sm-6">
                         <div class="we_box">
                            <i><img src="images/weicon2.png" alt="#"/></i>
                            <h3>Manicure</h3>
-                           <p>Lorem ipsum dolor sit amet, consectetur </p>
+                           <p>Expert nail care with shaping, cuticle care, and polish for a flawless finish.</p>
                         </div>
                      </div>
                      <div class="col-md-3 col-sm-6">
                         <div class="we_box">
                            <i><img src="images/weicon3.png" alt="#"/></i>
                            <h3>Pedicure</h3>
-                           <p>Lorem ipsum dolor sit amet, consectetur </p>
+                           <p>Relaxing pedicure with nail care, exfoliation, and perfect polish.</p>
                         </div>
                      </div>
                      <div class="col-md-3 col-sm-6">
                         <div class="we_box">
                            <i><img src="images/weicon4.png" alt="#"/></i>
                            <h3>Paraffin wax</h3>
-                           <p>Lorem ipsum dolor sit amet, consectetur </p>
+                           <p>Paraffin wax for soft, smooth, and hydrated skin.</p>
                         </div>
                      </div>
                   </div>
