--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                <div class="col-md-6">
                   <div class="titlepage">
                      <h2>About Us</h2>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                     <p>Welcome to H&S Elegance Salon, where beauty meets relaxation! We’re dedicated to making you look and feel your best with expert care and a touch of elegance. Your happiness is our priority!</p>
                      <a class="read_more" href="Javascript:void(0)"> Read More</a>
                   </div>
                </div>
